[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'flask_weasyprint'
description = 'Make PDF in your Flask app with WeasyPrint'
keywords = ['html', 'css', 'pdf', 'converter', 'flask', 'weasyprint']
authors = [{name = 'Simon Sapin', email = 'simon.sapin@exyr.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.7'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
dependencies = [
  'flask >=2.3.0',
  'weasyprint >=53.0',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules'
]
dynamic = ['version']

[project.urls]
Homepage = 'https://doc.courtbouillon.org/flask-weasyprint/'
Documentation = 'https://doc.courtbouillon.org/flask-weasyprint'
Code = 'https://github.com/Kozea/Flask-WeasyPrint'
Issues = 'https://github.com/Kozea/Flask-WeasyPrint/issues'
Changelog = 'https://github.com/Kozea/Flask-WeasyPrint/releases'
Donation = 'https://opencollective.com/courtbouillon'

[project.optional-dependencies]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'isort', 'flake8']

[tool.flit.sdist]
exclude = ['.*']

[tool.coverage.run]
branch = true
include = ['tests/*', 'flask_weasyprint/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
